--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
-const config = {
-    trailingComma: "es6",
-    tabWidth: 4,
-    semi: false,
-    singleQuote: true,
+module.exports = {
+    arrowParens: "avoid",
+    bracketSameLine: true,
+    bracketSpacing: false,
+    singleQuote: false,
+    trailingComma: "all",
+    tabWidth: 2,
+    useTabs: false,
+    semi: true,
+    printWidth: 80,
 };
-
-module.exports = config;
